<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="8dp"
    android:paddingStart="@dimen/margin"
    android:paddingEnd="@dimen/margin">

    <TextView
        android:id="@+id/registerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_description"
        android:textColor="@color/description_color"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/registerTitle"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username_input_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#CC1C1C1C"
        app:boxStrokeColor="@color/description_color"
        android:layout_marginTop="32dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/registerDescription"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_input_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#CC1C1C1C"
        app:boxStrokeColor="@color/description_color"
        android:layout_marginTop="12dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/usernameInputContainer"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_input_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#CC1C1C1C"
        app:boxStrokeColor="@color/description_color"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="12dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/emailInputContainer"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmInputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_confirm_input_hint"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="#CC1C1C1C"
        app:boxStrokeColor="@color/description_color"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="12dp"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/passwordInputContainer"
        app:layout_constraintLeft_toLeftOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/passwordConfirmInputContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>