<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RegisterLoginFragment"
    android:background="@drawable/background"
    android:padding="12sp">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title_form"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="28dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent "/>

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title_form"
        android:textColor="@color/description_color"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toRightOf="@id/loginTitle"/>

    <include
        android:id="@+id/loginForm"
        layout="@layout/login_form"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <include
        android:id="@+id/registerForm"
        layout="@layout/register_form"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english_lang"
        android:textColor="@color/description_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="@dimen/margin_12"/>

    <TextView
        android:id="@+id/btnIndonesia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesian_lang"
        android:textColor="@color/description_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="@dimen/margin_12"/>

</androidx.constraintlayout.widget.ConstraintLayout>