<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="username"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.MovieListFragment"
        android:background="@drawable/background">
        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{username}"
            android:textStyle="bold"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvHello"/>
        <TextView
            android:id="@+id/tvHelloDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_detail"
            android:layout_marginLeft="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@+id/tvHello"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="8dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:src="@drawable/profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/nestedScroll"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvHelloDetail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/margin_12">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPopularTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular_title"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="@dimen/margin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPopularTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <include layout="@layout/shimmer_home" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/posterViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:paddingStart="80dp"
                    android:paddingEnd="80dp"
                    android:layout_marginTop="@dimen/margin"
                    app:layout_constraintTop_toBottomOf="@+id/tvPopularTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/tvNowPlayingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_playing"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_16"
                    app:layout_constraintTop_toBottomOf="@id/posterViewPager"
                    app:layout_constraintLeft_toLeftOf="parent"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recViewNowPlaying"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvNowPlayingTitle"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_12"
                    tools:listitem="@layout/item_movie_now_playing"/>
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerNowPlayLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNowPlayingTitle"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_12">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <include layout="@layout/shimmer_now_play"
                            android:layout_marginBottom="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <include layout="@layout/shimmer_now_play"
                            android:layout_marginBottom="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <include layout="@layout/shimmer_now_play"
                            android:layout_marginBottom="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <include layout="@layout/shimmer_now_play"
                            android:layout_marginBottom="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
